fix: margins, widths, & alignments

--- a/src/styles/about.sass
+++ b/src/styles/about.sass
@@ -1,4 +1,6 @@
 .section .about-container
   max-width: 820px
+  h3
+    margin-top: 1.3333em;
 .selfie
   padding-bottom: 40px
